--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,5 +14,9 @@
 <app-directive></app-directive>
 
 <p>This is normal one</p>
-<p appcustom>This is custom one</p>
+<p appCustom>This is custom one</p>
+<h1>Custom pipe</h1>
+<p>
+    Multiplier : {{10 | Multiplier:125}}
+</p>
 <router-outlet></router-outlet>
