--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,4 +19,7 @@
 <p>
     Multiplier : {{10 | Multiplier:125}}
 </p>
+
+<h1>Http example</h1>
+<app-http-subscribe></app-http-subscribe>
 <router-outlet></router-outlet>
