--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,4 +22,16 @@
 
 <h1>Http example</h1>
 <app-http-subscribe></app-http-subscribe>
+
+
+<div style="text-align: center;">
+    <h1>Routing And Navigation</h1>
+</div>
+
+<nav style="text-align: center;">
+    <a href="" routerLink="/employee" routerLinkActive="active">Employees</a> &nbsp;
+    <a href="" routerLink="/department" routerLinkActive="active">Department</a>
+
+</nav>
 <router-outlet></router-outlet>
+
